--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "rikka.l4d2util"
+        applicationId "rikka.srcdsutil"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 2
@@ -21,6 +21,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_7
     }
     buildToolsVersion '26.0.2'
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
 }
 
 dependencies {
