移除服务器限制，限制可以兼容CSGO服务器查询 适配最新A2sInfo挑战协议

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@
 buildscript {
     
     repositories {
+        maven {
+            url 'https://maven.aliyun.com/repository/central'
+        }
         google()
         jcenter()
     }
